Added Watson Discovery api
