# openapi.json
@@ -1,12 +1,19 @@
 {
-    "openapi": "3.0.0",
+    "openapi": "3.0.1",
     "info": {
         "title": "FastAPI",
         "version": "0.1.0"
     },
     "servers": [
         {
-          "url": "localhost:4050"
+            "url": "https://{llm_route}",
+            "description": "The Route to the application hosting the queryllm application",
+            "variables": {
+                "llm_route": {
+                    "default": "us-south.containers.appdomain.cloud",
+                    "description": "The portion of the Route URL that follows https://"
+                }   
+            }
         }
     ],
     "paths": {
